welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt() {
	while (!estSurBiscuit) {
	if (isFacingTrail()) {
		baisseBrosse();
		leveBrosse();
		avance();
	} else {
		gauche();
	}
}
baisseBrosse();
leveBrosse();
prendBiscuit();
}

def isFacingTrail():Boolean = {
if (estFaceMur()) {
	return false
}
avance();
if (getCouleurSol()==c) {
	recule();
	return true
} else {
	recule();
	return false
}
}